# SooTech

./: README.md  pyproject.toml  setup.py
sootech/: __init__.py  soo.classes.py  soo.data.py  soo_classes.py  soo_functions.py  soo_plots.py  soo_statistic.py
test/: test_AutoML.ipynb  test_notebook.ipynb
